syntax = "proto3";
package protocol;

import "core/Tron.proto";
import "core/Contract.proto";

option java_package = "org.tron.api"; //Specify the name of the package that generated the Java file
option java_outer_classname = "GrpcAPI"; //Specify the class name of the generated Java file
option go_package = "github.com/tronprotocol/grpc-gateway/api";

service Wallet {

  rpc GetAccount (Account) returns (Account) {
  }

  rpc CreateTransaction (TransferContract) returns (Transaction) {
  }

  rpc BroadcastTransaction (Transaction) returns (Return) {
  }

  rpc UpdateAccount (AccountUpdateContract) returns (Transaction) {
  }

  rpc VoteWitnessAccount (VoteWitnessContract) returns (Transaction) {
  }

  rpc CreateAssetIssue (AssetIssueContract) returns (Transaction) {
  }

  rpc UpdateWitness (WitnessUpdateContract) returns (Transaction) {
  }

  rpc CreateWitness (WitnessCreateContract) returns (Transaction) {
  }

  rpc TransferAsset (TransferAssetContract) returns (Transaction) {
  }

  rpc ParticipateAssetIssue (ParticipateAssetIssueContract) returns (Transaction) {
  }

  rpc FreezeBalance (FreezeBalanceContract) returns (Transaction) {
  }

  rpc UnfreezeBalance (UnfreezeBalanceContract) returns (Transaction) {
  }

  rpc UnfreezeAsset (UnfreezeAssetContract) returns (Transaction) {
  }

  rpc WithdrawBalance (WithdrawBalanceContract) returns (Transaction) {
  }

  rpc UpdateAsset (UpdateAssetContract) returns (Transaction) {
  }

  rpc ListNodes (EmptyMessage) returns (NodeList) {
  }

  rpc GetAssetIssueByAccount (Account) returns (AssetIssueList) {
  }

  rpc GetAccountNet (Account) returns (AccountNetMessage) {
  }

  rpc GetAssetIssueByName (BytesMessage) returns (AssetIssueContract) {
  }

  rpc GetNowBlock (EmptyMessage) returns (Block) {
  }

  rpc GetBlockByNum (NumberMessage) returns (Block) {
  }

  rpc GetBlockById (BytesMessage) returns (Block) {
  }

  rpc GetBlockByLimitNext (BlockLimit) returns (BlockList) {
  }

  rpc GetBlockByLatestNum (NumberMessage) returns (BlockList) {
  }

  rpc GetTransactionById (BytesMessage) returns (Transaction) {
  }

  rpc ListWitnesses (EmptyMessage) returns (WitnessList) {
  }

  rpc GetAssetIssueList (EmptyMessage) returns (AssetIssueList) {
  }

  rpc TotalTransaction (EmptyMessage) returns (NumberMessage) {
  }

  rpc GetNextMaintenanceTime (EmptyMessage) returns (NumberMessage) {
  }
};


service WalletSolidity {

  rpc GetAccount (Account) returns (Account) {
  }

  rpc ListWitnesses (EmptyMessage) returns (WitnessList) {
  }

  rpc GetAssetIssueList (EmptyMessage) returns (AssetIssueList) {
  }

  rpc GetAssetIssueListByTimestamp (NumberMessage) returns (AssetIssueList) {
  }

  rpc GetAssetIssueByAccount (Account) returns (AssetIssueList) {
  }

  rpc GetAssetIssueByName (BytesMessage) returns (AssetIssueContract) {
  }

  rpc GetNowBlock (EmptyMessage) returns (Block) {
  }

  rpc GetBlockByNum (NumberMessage) returns (Block) {
  }

  //get transaction
  rpc TotalTransaction (EmptyMessage) returns (NumberMessage) {
  }

  rpc GetTransactionById (BytesMessage) returns (Transaction) {
  }
};

service WalletExtension {
  rpc GetTransactionsByTimestamp (TimePaginatedMessage) returns (TransactionList) {
  }

  rpc GetTransactionsByTimestampCount (TimeMessage) returns (NumberMessage) {
  }

  rpc GetTransactionsFromThis (AccountPaginated) returns (TransactionList) {
  }

  rpc GetTransactionsToThis (AccountPaginated) returns (TransactionList) {
  }

  rpc GetTransactionsFromThisCount (Account) returns (NumberMessage) {
  }

  rpc GetTransactionsToThisCount (Account) returns (NumberMessage) {
  }
};

// the api of tron's db
service Database {
  // for tapos
  rpc getBlockReference (EmptyMessage) returns (BlockReference) {

  }
  rpc GetDynamicProperties (EmptyMessage) returns (DynamicProperties) {

  }
  rpc GetNowBlock (EmptyMessage) returns (Block) {

  }
  rpc GetBlockByNum (NumberMessage) returns (Block) {

  }
};

message Return {
  enum response_code {
    SUCCESS = 0;
    SIGERROR = 1; // error in signature
    CONTRACT_VALIDATE_ERROR = 2;
    CONTRACT_EXE_ERROR = 3;
    BANDWITH_ERROR = 4;
    DUP_TRANSACTION_ERROR = 5;
    TAPOS_ERROR = 6;
    TOO_BIG_TRANSACTION_ERROR = 7;
    TRANSACTION_EXPIRATION_ERROR = 8;
    SERVER_BUSY = 9;
    OTHER_ERROR = 20;
  }

  bool result = 1;
  response_code code = 2;
  bytes message = 3;
}

message BlockReference {
  int64 block_num = 1;
  bytes block_hash = 2;
}

// the api of tron's network such as node list.
service Network {

};

message WitnessList {
  repeated Witness witnesses = 1;
}
message AssetIssueList {
  repeated AssetIssueContract assetIssue = 1;
}
message BlockList {
  repeated Block block = 1;
}
message TransactionList {
  repeated Transaction transaction = 1;
}

// Gossip node list
message NodeList {
  repeated Node nodes = 1;
}

// Gossip node
message Node {
  Address address = 1;
}

// Gossip node address
message Address {
  bytes host = 1;
  int32 port = 2;
}

message EmptyMessage {
}
message NumberMessage {
  int64 num = 1;
}
message BytesMessage {
  bytes value = 1;
}
message TimeMessage {
  int64 beginInMilliseconds = 1;
  int64 endInMilliseconds = 2;
}
message BlockLimit {
  int64 startNum = 1;
  int64 endNum = 2;
}
message TransactionLimit {
  bytes transactionId = 1;
  int64 limitNum = 2;
}
message AccountPaginated {
  Account account = 1;
  int64 offset = 2;
  int64 limit = 3;
}
message TimePaginatedMessage {
  TimeMessage timeMessage = 1;
  int64 offset = 2;
  int64 limit = 3;
}
message AccountNetMessage {
  int64 freeNetUsed = 1;
  int64 freeNetLimit = 2;
  int64 NetUsed = 3;
  int64 NetLimit = 4;
  map<string, int64> assetNetUsed = 5;
  map<string, int64> assetNetLimit = 6;
}